--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="js/index.js"></script>
+    <title>CRUD - JAVASCRIPT</title>
 </head>
 <body>
-    fhsbsdnvs
+    <h1>Cadastro de pessoas</h1>
+<form class="form js-form">
+    <label for="name">
+        Nome
+        <input class="form-field js-field" id="name" maxlength="120" name="name" required type="text">
+    </label>
+    <label for="birth-date">
+        Data de Nascimento
+        <input class="form-field js-field" id="birth-date" name="birth-date" required type="date">
+    </label>
+    <button type="submit" id="save">Salvar</button>
+    
+</form>
 </body>
 </html>
