--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </label>
     <label for="birth-date">
         Data de Nascimento <br>
-        <input class="form-field js-field" id="birth-date" name="birth-date" required type="date">
+        <input class="form-field js-field" id="dataDeNascimento" name="birth-date" required type="date">
     </label> <br>
     <button type="submit" id="save">Salvar</button>
     
