--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <form class="form js-form">
     <label for="name">
         Nome <br>
-        <input class="form" id="name" maxlength="120" name="name" required type="text" pattern="[a-zA-Z ]+" title="Somente letras"><br>
+        <input class="form" id="name" maxlength="120" name="name" required type="text" pattern="[a-zA-ZÀ-ú ]+" title="Somente letras"><br>
     </label>
     <label for="birth-date">
         Data de Nascimento <br>
